<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/ChocololateSyrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_chocololate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Sprinkles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Sprinkles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChocololateSyrup" />

    <CheckBox
        android:id="@+id/Crushednuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Crushednuts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sprinkles" />

    <CheckBox
        android:id="@+id/Cherries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Cherries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Crushednuts" />

    <CheckBox
        android:id="@+id/OrioCookie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_OrioCookie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cherries" />

    <Button
        android:id="@+id/Showtost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_showtost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OrioCookie" />

</androidx.constraintlayout.widget.ConstraintLayout>